--- a/css/main.css
+++ b/css/main.css
@@ -78,6 +78,12 @@ body {
   text-align: center;
 }
 
+.chart__label:hover,
+.chart__label:focus,
+.chart__label:active {
+  color: #fff;
+}
+
 .chart__bar-wrap {
   bottom: 0;
   position: absolute;
@@ -93,6 +99,13 @@ body {
 
   background-color: rgba(127, 219, 255, 0.6);
 }
+
+.chart__bar:hover,
+.chart__bar:focus,
+.chart__bar:active {
+  background-color: #000;
+}
+
 
 .chart__count {
   display: inline-block;
